force-app/main/default/objects/Anthem_API_Settings__c/fields/Broker_Portal_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Broker_Portal_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Portal Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>