force-app/main/default/objects/Anthem_API_Settings__c/fields/Customer_Master_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Master_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Master Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>