force-app/main/default/objects/Anthem_API_Settings__c/fields/Source_Environment__c.field-meta.xml
<CustomField>
    <fullName>Source_Environment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Environment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>